--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "versionup:major": "lerna version minor --conventional-commits",
     "release": "lerna publish from-package",
     "prettier": "prettier --write \"**/*.{js,jsx,ts,tsx,css}\"",
-    "netlify": "node public/update-index.js"
+    "netlify": "node public/update-index.js",
+    "yarn-update": "yarn set version stable && yarn install && yarn up && yarn npm audit && npx depcheck --detailed"
   },
   "devDependencies": {
     "husky": "^1.3.1",
@@ -66,5 +67,6 @@
       "prettier --write",
       "git add"
     ]
-  }
+  },
+  "packageManager": "yarn@4.1.0"
 }
