--- a/lerna.json
+++ b/lerna.json
@@ -1,8 +1,6 @@
 {
-  "packages": [
-    "packages/*"
-  ],
-  "version": "1.0.2",
-  "npmClient": "yarn",
-  "useWorkspaces": true
+    "packages": ["packages/*"],
+    "version": "1.0.2",
+    "npmClient": "yarn",
+    "$schema": "node_modules/lerna/schemas/lerna-schema.json"
 }
