--- a/packages/mdline/package.json
+++ b/packages/mdline/package.json
@@ -1,12 +1,12 @@
 {
-  "author": "azu",
+  "author": "JV-conseil",
   "bin": "bin/cmd.js",
   "bugs": {
-    "url": "https://github.com/azu/mdline/issues"
+    "url": "https://github.com/JV-conseil/mdline/issues"
   },
   "dependencies": {
     "@babel/generator": "^7.23.6",
-    "@babel/parser": "^7.23.9",
+    "@babel/parser": "^7.24.0",
     "@mdline/mdline-formatter-html": "^1.0.2",
     "@mdline/mdline-parser": "^1.0.2",
     "meow": "^13.2.0"
@@ -15,14 +15,14 @@
   "devDependencies": {
     "@types/babel__generator": "^7.6.8",
     "@types/mocha": "^10.0.6",
-    "@types/node": "^20.11.20",
+    "@types/node": "^20.11.25",
     "cross-env": "^7.0.3",
     "mocha": "^10.3.0",
     "prettier": "^3.2.5",
     "rimraf": "^5.0.5",
     "ts-node": "^10.9.2",
     "ts-node-test-register": "^10.0.0",
-    "typescript": "^5.3.3"
+    "typescript": "^5.4.2"
   },
   "directories": {
     "lib": "lib",
@@ -34,7 +34,7 @@
     "src/"
   ],
   "gitHead": "a2524a6ac6b42f6fcd7ef5a91ef6d2c31a369f36",
-  "homepage": "https://github.com/azu/mdline/tree/master/packages/mdline/",
+  "homepage": "https://github.com/JV-conseil/mdline/tree/main/packages/mdline/",
   "keywords": [
     "cli",
     "mdline"
@@ -49,17 +49,18 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/azu/mdline.git"
+    "url": "https://github.com/JV-conseil/mdline.git"
   },
   "scripts": {
     "build": "cross-env NODE_ENV=production tsc -p .",
     "clean": "rimraf lib/",
     "prepublish": "npm run --if-present build",
     "prettier": "prettier --write \"**/*.{js,jsx,ts,tsx,css}\"",
-    "test": "mocha \"test/**/*.ts\"",
+    "test": "mocha \"test/*.ts\"",
     "updateSnapshot": "cross-env UPDATE_SNAPSHOT=1 npm test",
     "watch": "tsc -p . --watch"
   },
+  "type": "module",
   "types": "lib/mdline.d.ts",
   "version": "1.0.2"
 }
