--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mdline/types",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "Types definitions for mdline.",
   "keywords": [
     "mdline",
@@ -15,7 +15,7 @@
     "type": "git",
     "url": "https://github.com/JV-conseil/mdline.git"
   },
-  "license": "MIT",
+  "license": "EUPL-1.2",
   "author": "JV-conseil",
   "files": [
     "bin/",
