yarn add -D mdline@JV-conseil/mdline#workspace=mdline

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -19,6 +19,11 @@
       },
     },
     {
+      "label": "test",
+      "command": "yarn run test",
+      "detail": "test"
+    },
+    {
       "label": "yarn",
       "command": "npm run yarn-update",
       "detail": "Upgrade dependencies"
