--- a/packages/mdline-formatter-html/package.json
+++ b/packages/mdline-formatter-html/package.json
@@ -52,7 +52,7 @@
   "scripts": {
     "build": "cross-env NODE_ENV=production tsc -p .",
     "clean": "rimraf lib/",
-    "prepublish": "npm run --if-present build",
+    "prepublish": "yarn run --if-present build",
     "prettier": "prettier --write \"**/*.{js,jsx,ts,tsx,css}\"",
     "watch": "tsc -p . --watch"
   },
