--- a/packages/mdline/package.json
+++ b/packages/mdline/package.json
@@ -7,8 +7,8 @@
   "dependencies": {
     "@babel/generator": "^7.23.6",
     "@babel/parser": "^7.24.0",
-    "@mdline/mdline-formatter-html": "^1.0.2",
-    "@mdline/mdline-parser": "^1.0.2",
+    "@mdline/mdline-formatter-html": "JV-conseil/mdline#workspace=mdline-formatter-html",
+    "@mdline/mdline-parser": "JV-conseil/mdline#workspace=mdline-parser",
     "meow": "^13.2.0"
   },
   "description": "markdown to timeline tool.",
@@ -54,7 +54,7 @@
   "scripts": {
     "build": "cross-env NODE_ENV=production tsc -p .",
     "clean": "rimraf lib/",
-    "prepublish": "npm run --if-present build",
+    "prepublish": "yarn run --if-present build",
     "prettier": "prettier --write \"**/*.{js,jsx,ts,tsx,css}\"",
     "test": "mocha \"test/*.ts\"",
     "updateSnapshot": "cross-env UPDATE_SNAPSHOT=1 npm test",
