--- a/packages/mdline/package.json
+++ b/packages/mdline/package.json
@@ -7,8 +7,8 @@
   "dependencies": {
     "@babel/generator": "^7.23.6",
     "@babel/parser": "^7.24.0",
-    "@mdline/mdline-formatter-html": "JV-conseil/mdline#workspace=mdline-formatter-html",
-    "@mdline/mdline-parser": "JV-conseil/mdline#workspace=mdline-parser",
+    "@mdline/mdline-formatter-html": "JV-conseil/mdline#workspace=@mdline/mdline-formatter-html",
+    "@mdline/mdline-parser": "JV-conseil/mdline#workspace=@mdline/mdline-parser",
     "meow": "^13.2.0"
   },
   "description": "markdown to timeline tool.",
