Lerna (powered by Nx)   Successfully ran target build for 4 projects

--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
     "versionup:major": "lerna version minor --conventional-commits",
     "versionup:minor": "lerna version minor --conventional-commits",
     "versionup:patch": "lerna version patch --conventional-commits",
-    "yarn-update": "yarn set version stable && yarn install && yarn up && yarn npm audit && npx depcheck --detailed && yarn upgrade-interactive"
+    "yarn-update": "yarn set version stable && yarn install && yarn up && yarn npm audit && ( npx depcheck --detailed ) || : && yarn upgrade-interactive"
   },
   "version": "1.0.3",
   "workspaces": [
