--- a/packages/mdline-formatter-html/package.json
+++ b/packages/mdline-formatter-html/package.json
@@ -4,13 +4,13 @@
     "url": "https://github.com/JV-conseil/mdline/issues"
   },
   "dependencies": {
-    "@mdline/types": "JV-conseil/mdline#workspace=@mdline/types",
+    "@mdline/types": "^1.0.2",
     "svelte": "^4.2.12"
   },
   "description": "HTML formatter for mdline",
   "devDependencies": {
     "@types/mocha": "^10.0.6",
-    "@types/node": "^20.11.25",
+    "@types/node": "^20.11.26",
     "cross-env": "^7.0.3",
     "mocha": "^10.3.0",
     "prettier": "^3.2.5",
