--- a/packages/mdline/package.json
+++ b/packages/mdline/package.json
@@ -7,7 +7,7 @@
   "dependencies": {
     "@babel/generator": "^7.23.6",
     "@babel/parser": "^7.24.0",
-    "@mdline/mdline-formatter-html": "^1.0.2",
+    "@mdline/mdline-formatter-html": "JV-conseil/mdline#workspace=@mdline/mdline-formatter-html",
     "@mdline/mdline-parser": "^1.0.2",
     "meow": "^13.2.0"
   },
