--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "versionup:major": "lerna version minor --conventional-commits",
     "release": "lerna publish from-package",
     "prettier": "prettier --write \"**/*.{js,jsx,ts,tsx,css}\"",
-    "netlify": "node public/update-index.js"
+    "netlify": "node public/update-index.js",
+    "yarn-update": "yarn set version stable && yarn install && yarn up && yarn npm audit && ( npx depcheck --detailed ) || : && yarn upgrade-interactive"
   },
   "devDependencies": {
     "husky": "^1.3.1",
@@ -67,5 +68,5 @@
       "git add"
     ]
   },
-  "packageManager": "yarn@4.1.1+sha256.f3cc0eda8e5560e529c7147565b30faa43b4e472d90e8634d7134a37c7f59781"
+  "packageManager": "yarn@4.1.1"
 }
