--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -25,7 +25,7 @@
     },
     {
       "label": "yarn",
-      "command": "npm run yarn-update",
+      "command": "yarn run yarn-update",
       "detail": "Upgrade dependencies"
     }
   ]
