--- a/packages/mdline-parser/package.json
+++ b/packages/mdline-parser/package.json
@@ -1,49 +1,10 @@
 {
-  "name": "@mdline/mdline-parser",
-  "version": "1.0.2",
-  "description": "A parser for mdline.",
-  "keywords": [
-    "ast",
-    "markdown",
-    "mdline"
-  ],
-  "homepage": "https://github.com/azu/mdline/tree/master/packages/mdline-parser/",
+  "author": "azu",
   "bugs": {
     "url": "https://github.com/azu/mdline/issues"
   },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/azu/mdline.git"
-  },
-  "license": "MIT",
-  "author": "azu",
-  "files": [
-    "bin/",
-    "lib/",
-    "src/"
-  ],
-  "main": "lib/mdline-parser.js",
-  "types": "lib/mdline-parser.d.ts",
-  "directories": {
-    "lib": "lib",
-    "test": "test"
-  },
-  "scripts": {
-    "build": "cross-env NODE_ENV=production tsc -p .",
-    "clean": "rimraf lib/",
-    "prettier": "prettier --write \"**/*.{js,jsx,ts,tsx,css}\"",
-    "prepublish": "npm run --if-present build",
-    "test": "mocha \"test/**/*.ts\"",
-    "updateSnapshot": "cross-env UPDATE_SNAPSHOT=1 npm test",
-    "watch": "tsc -p . --watch"
-  },
-  "prettier": {
-    "printWidth": 120,
-    "singleQuote": false,
-    "tabWidth": 4
-  },
   "dependencies": {
-    "@mdline/types": "^1.0.2",
+    "@mdline/types": "@mdline/types@JV-conseil/mdline#workspace=@mdline/types",
     "mdast-util-to-string": "^4.0.0",
     "remark-html": "^16.0.1",
     "remark-parse": "^11.0.0",
@@ -52,6 +13,7 @@
     "unified": "^11.0.4",
     "unist-util-select": "^5.1.0"
   },
+  "description": "A parser for mdline.",
   "devDependencies": {
     "@types/mocha": "^10.0.6",
     "@types/node": "^20.11.26",
@@ -63,8 +25,46 @@
     "ts-node-test-register": "^10.0.0",
     "typescript": "^5.4.2"
   },
+  "directories": {
+    "lib": "lib",
+    "test": "test"
+  },
+  "files": [
+    "bin/",
+    "lib/",
+    "src/"
+  ],
+  "gitHead": "a2524a6ac6b42f6fcd7ef5a91ef6d2c31a369f36",
+  "homepage": "https://github.com/azu/mdline/tree/master/packages/mdline-parser/",
+  "keywords": [
+    "ast",
+    "markdown",
+    "mdline"
+  ],
+  "license": "MIT",
+  "main": "lib/mdline-parser.js",
+  "name": "@mdline/mdline-parser",
+  "prettier": {
+    "printWidth": 120,
+    "singleQuote": false,
+    "tabWidth": 4
+  },
   "publishConfig": {
     "access": "public"
   },
-  "gitHead": "a2524a6ac6b42f6fcd7ef5a91ef6d2c31a369f36"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/azu/mdline.git"
+  },
+  "scripts": {
+    "build": "cross-env NODE_ENV=production tsc -p .",
+    "clean": "rimraf lib/",
+    "prepublish": "yarn run --if-present build",
+    "prettier": "prettier --write \"**/*.{js,jsx,ts,tsx,css}\"",
+    "test": "mocha \"test/**/*.ts\"",
+    "updateSnapshot": "cross-env UPDATE_SNAPSHOT=1 npm test",
+    "watch": "tsc -p . --watch"
+  },
+  "types": "lib/mdline-parser.d.ts",
+  "version": "1.0.3"
 }
