--- a/packages/mdline/tsconfig.json
+++ b/packages/mdline/tsconfig.json
@@ -1,36 +1,36 @@
 {
   "compilerOptions": {
-    /* Basic Options */
-    "module": "commonjs",
-    "moduleResolution": "node",
-    "esModuleInterop": true,
-    "newLine": "LF",
-    "outDir": "./lib/",
-    "target": "es5",
-    "sourceMap": true,
     "declaration": true,
+    "esModuleInterop": true,
     "jsx": "preserve",
     "lib": [
       "es2018",
       "dom"
     ],
-    /* Strict Type-Checking Options */
-    "strict": true,
+    /* Basic Options */
+    "module": "commonjs",
+    "moduleResolution": "node",
+    "newLine": "LF",
+    /* Report errors for fallthrough cases in switch statement. */
+    "noFallthroughCasesInSwitch": true,
+    /* Report error when not all code paths in function return a value. */
+    "noImplicitReturns": true,
     /* Additional Checks */
     /* Report errors on unused locals. */
     "noUnusedLocals": true,
     /* Report errors on unused parameters. */
     "noUnusedParameters": true,
-    /* Report error when not all code paths in function return a value. */
-    "noImplicitReturns": true,
-    /* Report errors for fallthrough cases in switch statement. */
-    "noFallthroughCasesInSwitch": true
+    "outDir": "./lib/",
+    "sourceMap": true,
+    /* Strict Type-Checking Options */
+    "strict": true,
+    "target": "es5"
   },
-  "include": [
-    "src/**/*"
-  ],
   "exclude": [
     ".git",
     "node_modules"
+  ],
+  "include": [
+    "src/**/*"
   ]
 }
