--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mdline/types",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "Types definitions for mdline.",
   "keywords": [
     "mdline",
@@ -32,7 +32,7 @@
     "build": "cross-env NODE_ENV=production tsc -p .",
     "clean": "rimraf lib/",
     "prettier": "prettier --write \"**/*.{js,jsx,ts,tsx,css}\"",
-    "prepublish": "npm run --if-present build",
+    "prepublish": "yarn run --if-present build",
     "watch": "tsc -p . --watch"
   },
   "prettier": {
