--- a/packages/mdline-formatter-html/package.json
+++ b/packages/mdline-formatter-html/package.json
@@ -1,48 +1,13 @@
 {
-  "name": "@mdline/mdline-formatter-html",
-  "version": "1.0.3",
-  "description": "HTML formatter for mdline",
-  "keywords": [
-    "mdline"
-  ],
-  "homepage": "https://github.com/azu/mdline/tree/master/packages/mdline-formatter-html/",
+  "author": "azu",
   "bugs": {
     "url": "https://github.com/azu/mdline/issues"
   },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/azu/mdline.git"
-  },
-  "license": "MIT",
-  "author": "azu",
-  "files": [
-    "bin/",
-    "lib/",
-    "src/",
-    "component/"
-  ],
-  "main": "lib/mdline-formatter-html.js",
-  "types": "lib/mdline-formatter-html.d.ts",
-  "directories": {
-    "lib": "lib",
-    "test": "test"
-  },
-  "scripts": {
-    "build": "cross-env NODE_ENV=production tsc -p .",
-    "clean": "rimraf lib/",
-    "prettier": "prettier --write \"**/*.{js,jsx,ts,tsx,css}\"",
-    "prepublish": "yarn run --if-present build",
-    "watch": "tsc -p . --watch"
-  },
-  "prettier": {
-    "printWidth": 120,
-    "singleQuote": false,
-    "tabWidth": 4
-  },
   "dependencies": {
-    "@mdline/types": "@mdline/types@JV-conseil/mdline#workspace=@mdline/types",
+    "@mdline/types": "^1.0.2",
     "svelte": "^4.2.12"
   },
+  "description": "HTML formatter for mdline",
   "devDependencies": {
     "@types/mocha": "^10.0.6",
     "@types/node": "^20.11.26",
@@ -54,8 +19,43 @@
     "ts-node-test-register": "^10.0.0",
     "typescript": "^5.4.2"
   },
+  "directories": {
+    "lib": "lib",
+    "test": "test"
+  },
+  "files": [
+    "bin/",
+    "lib/",
+    "src/",
+    "component/"
+  ],
+  "gitHead": "a2524a6ac6b42f6fcd7ef5a91ef6d2c31a369f36",
+  "homepage": "https://github.com/azu/mdline/tree/master/packages/mdline-formatter-html/",
+  "keywords": [
+    "mdline"
+  ],
+  "license": "MIT",
+  "main": "lib/mdline-formatter-html.js",
+  "name": "@mdline/mdline-formatter-html",
+  "prettier": {
+    "printWidth": 120,
+    "singleQuote": false,
+    "tabWidth": 4
+  },
   "publishConfig": {
     "access": "public"
   },
-  "gitHead": "a2524a6ac6b42f6fcd7ef5a91ef6d2c31a369f36"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/azu/mdline.git"
+  },
+  "scripts": {
+    "build": "cross-env NODE_ENV=production tsc -p .",
+    "clean": "rimraf lib/",
+    "prepublish": "yarn run --if-present build",
+    "prettier": "prettier --write \"**/*.{js,jsx,ts,tsx,css}\"",
+    "watch": "tsc -p . --watch"
+  },
+  "types": "lib/mdline-formatter-html.d.ts",
+  "version": "1.0.3"
 }
