--- a/packages/mdline-parser/package.json
+++ b/packages/mdline-parser/package.json
@@ -1,10 +1,10 @@
 {
-  "author": "azu",
+  "author": "JV-conseil",
   "bugs": {
-    "url": "https://github.com/azu/mdline/issues"
+    "url": "https://github.com/JV-conseil/mdline/issues"
   },
   "dependencies": {
-    "@mdline/types": "^1.0.2",
+    "@mdline/types": "JV-conseil/mdline#workspace=@mdline/types",
     "mdast-util-to-string": "^4.0.0",
     "remark-html": "^16.0.1",
     "remark-parse": "^11.0.0",
@@ -35,7 +35,7 @@
     "src/"
   ],
   "gitHead": "a2524a6ac6b42f6fcd7ef5a91ef6d2c31a369f36",
-  "homepage": "https://github.com/azu/mdline/tree/master/packages/mdline-parser/",
+  "homepage": "https://github.com/JV-conseil/mdline/tree/main/packages/mdline-parser/",
   "keywords": [
     "ast",
     "markdown",
@@ -54,7 +54,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/azu/mdline.git"
+    "url": "https://github.com/JV-conseil/mdline.git"
   },
   "scripts": {
     "build": "cross-env NODE_ENV=production tsc -p .",
