--- a/.gitignore
+++ b/.gitignore
@@ -80,7 +80,7 @@ com_crashlytics_export_strings.xml
 crashlytics.properties
 crashlytics-build.properties
 
-lib/
+# lib/
 /public/index.html
 .DS_Store
 .yarn
