--- a/packages/mdline/package.json
+++ b/packages/mdline/package.json
@@ -61,6 +61,7 @@
     "updateSnapshot": "cross-env UPDATE_SNAPSHOT=1 npm test",
     "watch": "tsc -p . --watch"
   },
+  "type": "module",
   "types": "lib/mdline.d.ts",
   "version": "1.0.3"
 }
